--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
 
 <body>
+    <header><h1 class="titulo">POST MALONE</h1></header>    
+    <main>
     <div class="bio">
-        <span><img src="assets/img/postMalone.jpg" width="400px" height="400px" alt="imagen de post malone"></span>
+        <span><img src="assets/img/postMalone.jpg" width="450px" height="100%" alt="imagen de post malone"></span>
         <span class="infoBio">
+            <h3 class="titulo">Sobre él</h3>
             <p>  Austin Richard Post nacio el  4 de julio de 1995 en Siracusa, Nueva York, 
                 más conocido por su nombre artístico Post Malone, es un rapero, 
                 cantante, actor y compositor estadounidense. Ganó un gran reconocimiento 
@@ -41,9 +44,9 @@
         </span>
     </div>    
 
-    <div>
+    <article>
         <span class="discos">
-            <h1>Discografia</h1>
+            <h1 class="titulo">Discografia</h1>
             <p>Post Malone cuenta con 5 albumes y el album compilacion "The Diamond Collection" el cualfue lanzado para celebrar que Malone se 
             convirtió en el artista con la mayor cantidad de sencillos certificados con diamantes por la Recording Industry Association of America (RIAA)</p>
             <ul>
@@ -55,9 +58,9 @@
                 <li><a href="https://open.spotify.com/album/6r1lh7fHMB499vGKtIyJLy?si=p1w68yMwRz2Vr9p4diIgdA" target="_blank"><img src="assets/img/austin.jpg"           width="200px" height="200px"></a></li>       
             </ul>            
         </span>
-    </div> 
-
-    <div>
+    </article> 
+        </main>
+    <footer>
         <span class="redes">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/246dkjvS1zLTtiykXe5h60?utm_source=generator" width="75%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <ul>
@@ -67,7 +70,7 @@
             </ul>
         
         </span>
-    </div>
+    </footer>
 
     
 
